--- a/mandelbulber2/formula/ui/lkmitch.ui
+++ b/mandelbulber2/formula/ui/lkmitch.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>lkmitch</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>427</width>
-    <height>430</height>
+    <width>736</width>
+    <height>462</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,7 @@
     <number>2</number>
    </property>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_180">
      <property name="text">
       <string>No parameters</string>
      </property>
