--- a/mandelbulber2/formula/ui/transf_benesi_t5b.ui
+++ b/mandelbulber2/formula/ui/transf_benesi_t5b.ui
@@ -30,6 +30,13 @@
     <number>2</number>
    </property>
    <item>
+    <widget class="QLabel" name="label_258">
+     <property name="text">
+      <string>Often used as a pre-transform for the first iteration</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_63" columnstretch="0,0,0,0,0,1">
      <property name="spacing">
       <number>2</number>
@@ -303,13 +310,6 @@
       <widget class="QLabel" name="label_261">
        <property name="text">
         <string notr="true">z</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="1">
-      <widget class="QLabel" name="label_258">
-       <property name="text">
-        <string>Scale:</string>
        </property>
       </widget>
      </item>
